fix overlaping

--- a/src/components/MovieThumbnail/movieThumbnail.scss
+++ b/src/components/MovieThumbnail/movieThumbnail.scss
@@ -34,7 +34,7 @@
   background: $backgroundGrey;
   height: 330px;
   position: relative;
-  margin-top: -4px;
+  margin-top: 0;
   position: relative;
   width: 220px;
 
@@ -62,7 +62,7 @@
   }
 
   img {
-    height: auto;
+    height: 100%;
     width: 100%;
   }
 }
